<resources>
    <string name="app_name">Nomwell</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_login">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_city">Choose Your First City</string>
    <string name="search">Search</string>
    <string name="title_activity_my_spots">My Spots</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_spots">My Spots</string>
    <string name="login">Login</string>
    <string name="choose_city">Choose City</string>
    <string name="all">All</string>
    <string name="visited">Visited</string>
    <string name="pinned">Pinned</string>
    <string name="now_lets_get_started">Now let\'s get started</string>
    <string name="lets_get_started_message">Do you have an existing restaurant list (like notes app or spreadsheet) that you want imported?</string>
    <string name="fantastic_">Fantastic!</string>
    <string name="where_is_your_list_located_">We\'ll send you an email with instructions on how to finish the import process from your computer.\n(It\'s super easy.)</string>
    <string name="confirm_email_address">Coolio. Please confirm your email address.</string>
    <string name="enter_email_address">Enter email address</string>

    <string-array name="lets_started_options">
        <item>Yes! Yes! A million times yes!</item>
        <item>Nope, I\'ll start from scratch</item>
    </string-array>

    <string-array name="list_location_options">
        <item>On my phone</item>
        <item>On my computer</item>
        <item>Cancel</item>
    </string-array>
    <string name="title_activity_list_import">List Import</string>
    <string name="send">send</string>
    <string name="cancel">cancel</string>
    <string name="all_spot_empty_text">You have no spots yet!\n\nAdd places you want to try or have been to with the + below, or import an existing list from the sidebar</string>
    <string name="my_lists_mine_empty_text">
        You haven\'t made any lists yet!\n\n
        Create your own lists, like \"Best Hipster-Watching Bars\",
        from your place in My Spots.\n\nStart with the + below.</string>
    <string name="my_lists_following_empty_text">
        You aren\'t following any friends\' lists yet!\n\n
        When a friend sends you a list, you can access it here and see any future changes to it.\n\n
        If you have friends using Nomwell, go ask them to share a lists!</string>
    <string name="choose_your_city_empty_text">
        Nomwell organizes your spots by city.\n\n
        Choose the first city for which you want to keep track of restaurants.\n
    (This is usually the city you live in near.)</string>
     <string name="my_lists_spot_recs_empty_text">
        You haven\'t received any spot recommendations yet!\n\n
        Friends can send you individual spot recs using the Share feature in My Spots,
     without creating a list. Received recommendations will show up here.</string>

    <string name="add_spots_empty_text">
        Spots near you would normally be shown here, but GPS in Nomwell is currently disable.\n\n
    To see nearby spots, enable GPS in Settings -> Location.</string>

    <string name="mine">Mine</string>
    <string name="following">Following</string>
    <string name="spot_recs">Spot Recs</string>
    <string name="must_add_places">You must add places to My Spots before using this feature!</string>
    <string name="must_have_list">You must have lists before using this feature!</string>
    <string name="ask_location_tile">Allow \"Nomwell\" to access your location while you use the app?</string>
    <string name="ask_location_description">You\'ll then be able to see what spots are nearby</string>
    <string name="title_activity_add_spots">Add Spots</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="papular_places_near_me">Popular Places Near Me</string>
    <string name="howd_you_like_it">How\'d you like it?</string>
    <string name="title_activity_starting">" "</string>
    <string name="title_activity_intro">Intro</string>
    <string name="to_quickly_add_spots_to_your_list">To quickly add spots to your list</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="title_activity_add_new_spot">Add New Spot</string>
    <string name="title_activity_add_tag">AddTagActivity</string>
    <string name="last_step_desc">To connect you with friends in your contacts, please enter your phone number for matching purposes.\n(It won\'t be used for anything else)</string>
    <string name="save">Save</string>
    <string name="title_activity_select_spot">Select Spot</string>
    <string name="select">select</string>
    <string name="title_activity_select_list">Select List</string>
    <string name="title_activity_nomwell_contacts">Nomwell Contacts</string>
    <string name="status_">Status:</string>
    <string name="stars_">Stars:</string>
    <string name="price_">Price:</string>
    <string name="cuisine_">Cuisine:</string>
    <string name="tag_">Tag:</string>
    <string name="title_activity_contacts_spot">ContactsSpot</string>
    <string name="title_activity_contact_list_spot">Contact List Spot</string>
</resources>
